# FaultViz

./: README.md  example.ipynb  pyproject.toml
faultviz/: __init__.py  view.py
