[project]
name = "faultviz"
version = "1.0.1"
description = ""
requires-python = ">=3.12"
dependencies = [
  "deephaven-server <= 41.5",
  "deephaven_ipywidgets == 0.6.2",
  "tqdm",
  "pygwalker",
  "pandas",
  "jupyterlab"
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
  ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
